# linphoneClient

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: .gitignore  CMakeLists.txt
app/modules/glad/: CMakeLists.txt
app/modules/glad/include/glad/: glad.h
app/modules/glad/src/: glad.c
app/src/: Application.cpp  Application.h  Controller.h  Editor.cpp  Editor.h  main.cpp
src/: Model.cpp  Model.h
